@@ -53,17 +53,14 @@ In combination with -a, include all partitions.
 .I "-g attribute"
 Target nodes that have the specified genders attribute.	
 \}
-.if @HAVE_RMS@ \{
-.I "-N nodecount"
-Request that nodes be allocated from RMS.
-.LP
-.I "-P partition"
-Select non-default RMS partition.
-\}
 .LP
 .I "-i"
 In conjunction with -a or -g, request alternate hostnames.
 .LP
+.if @HAVE_RMS@ \{
+If the RMS_RESOURCEID environment variable is set to an allocated RMS
+resource, RMS will be queried for the list of target nodes.
+\}
 If none of the above options are specified, the WCOLL environment variable
 must point to a file that contains a list of nodes, one per line.  
 
@@ -98,6 +95,10 @@ Default is no limit.
 .LP
 .I "-c"
 In interactive mode, do not remove failed hosts from the target node list.
+.LP
+.I "-n tasks per node"
+Set the number of tasks spawned per node.  The underlying remote shell service
+must support spawning multiple tasks for this to be effective.
 .if @HAVE_ELAN@ \{
 .I "-E"
 Run command using qshell.  Qshell propagates the
@@ -106,10 +107,6 @@ environment and current working directory to remote processes.
 To enable running of MPI jobs on the Quadrics Elan3 interconnect,
 Elan capabilities are propagated and the following environment variables 
 are set: RMS_RANK, RMS_NODEID, RMS_PROCID, RMS_NNODES, and RMS_NPROCS.
-.LP
-.I "-n number"
-In combination with -E, set the number of total processes, which should
-be a multiple of the number of hosts in the target host list.
 .LP
 .I "-m block | cyclic"
 In combination wiht -E, set block versus cyclic allocation of processes 
